@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T00:52:11Z",
+  "timestamp" : "2022-05-07T16:15:09Z",
   "count_outdated" : 263,
   "uniques_outdated" : 129,
-  "count" : 270,
-  "uniques" : 136,
+  "count" : 271,
+  "uniques" : 137,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
