@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 5,
   "clones": [
     {
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2022-05-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
